Update classes with energyStarScore