@@ -9,6 +9,7 @@ import org.springframework.boot.data.jpa.test.autoconfigure.DataJpaTest;
 import org.springframework.boot.jdbc.test.autoconfigure.AutoConfigureTestDatabase;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.DynamicPropertyRegistry;
 import org.springframework.test.context.DynamicPropertySource;
 import org.testcontainers.postgresql.PostgreSQLContainer;
@@ -22,6 +23,7 @@ import java.util.Optional;
 import static org.assertj.core.api.Assertions.assertThat;
 
 @DataJpaTest
+@ActiveProfiles("test")
 @Testcontainers
 @AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
 class ListingRepositoryTest {
@@ -52,7 +54,8 @@ class ListingRepositoryTest {
                 "250000",
                 3,
                 1.5,
-                2250
+                2250,
+                50
         ));
 
         Optional<Listing> result = listingRepository.findById(saved.getId());
@@ -60,6 +63,7 @@ class ListingRepositoryTest {
         assertThat(result).isPresent();
         assertThat(result.get().getAddress()).isEqualTo("30 Pitt St");
         assertThat(result.get().getPrice()).isEqualByComparingTo("250000");
+        assertThat(result.get().getEnergyStarScore()).isEqualTo(50);
     }
 
     @Test
@@ -72,11 +76,11 @@ class ListingRepositoryTest {
     @Test
     void findAll_shouldReturnAllListingsWhenFilterIsEmpty() {
         listingRepository.saveAll(List.of(
-                buildListing("30 Pitt St", "250000", 3, 1.5, 2250),
-                buildListing("40 Oak Ave", "400000", 4, 2.5, 3000)
+                buildListing("30 Pitt St", "250000", 3, 1.5, 2250, 50),
+                buildListing("40 Oak Ave", "400000", 4, 2.5, 3000, 79)
         ));
 
-        ListingFilter filter = new ListingFilter(null, null, null, null, null);
+        ListingFilter filter = new ListingFilter(null, null, null, null, null, null);
 
         Page<Listing> result = listingRepository.findAll(
                 ListingSpecification.fromFilter(filter),
@@ -89,12 +93,13 @@ class ListingRepositoryTest {
     @Test
     void findAll_shouldFilterByMinPrice() {
         listingRepository.saveAll(List.of(
-                buildListing("30 Pitt St", "250000", 3, 1.5, 2250),
-                buildListing("40 Oak Ave", "500000", 4, 2.5, 3000)
+                buildListing("30 Pitt St", "250000", 3, 1.5, 2250, 50),
+                buildListing("40 Oak Ave", "500000", 4, 2.5, 3000, 79)
         ));
 
         ListingFilter filter = new ListingFilter(
                 new BigDecimal("300000"),
+                null,
                 null,
                 null,
                 null,
@@ -107,16 +112,17 @@ class ListingRepositoryTest {
         );
 
         assertThat(result.getContent()).hasSize(1);
-        assertThat(result.getContent().get(0).getAddress()).isEqualTo("40 Oak Ave");
+        assertThat(result.getContent().getFirst().getAddress()).isEqualTo("40 Oak Ave");
     }
 
     @Test
     void findAll_shouldFilterByMultipleCriteria() {
         listingRepository.saveAll(List.of(
-                buildListing("Match", "350000", 3, 2.0, 1800),
-                buildListing("Too Cheap", "200000", 3, 2.0, 1800),
-                buildListing("Too Few Beds", "350000", 2, 2.0, 1800),
-                buildListing("Too Small", "350000", 3, 2.0, 1200)
+                buildListing("Match", "350000", 3, 2.0, 1800, 60),
+                buildListing("Too Cheap", "200000", 3, 2.0, 1800, 60),
+                buildListing("Too Few Beds", "350000", 2, 2.0, 1800, 60),
+                buildListing("Too Small", "350000", 3, 2.0, 1200, 60),
+                buildListing("Too Low Energy Score", "350000", 3, 2.0, 1600, 35)
         ));
 
         ListingFilter filter = new ListingFilter(
@@ -124,7 +130,8 @@ class ListingRepositoryTest {
                 new BigDecimal("400000"),
                 3,
                 2.0,
-                1500
+                1500,
+                50
         );
 
         Page<Listing> result = listingRepository.findAll(
@@ -133,18 +140,18 @@ class ListingRepositoryTest {
         );
 
         assertThat(result.getContent()).hasSize(1);
-        assertThat(result.getContent().get(0).getAddress()).isEqualTo("Match");
+        assertThat(result.getContent().getFirst().getAddress()).isEqualTo("Match");
     }
 
     @Test
     void findAll_shouldRespectPagination() {
         listingRepository.saveAll(List.of(
-                buildListing("A St", "100000", 2, 1.0, 1000),
-                buildListing("B St", "200000", 2, 1.0, 1000),
-                buildListing("C St", "300000", 2, 1.0, 1000)
+                buildListing("A St", "100000", 2, 1.0, 1000, 40),
+                buildListing("B St", "200000", 2, 1.0, 1000, 55),
+                buildListing("C St", "300000", 2, 1.0, 1000, 70)
         ));
 
-        ListingFilter filter = new ListingFilter(null, null, null, null, null);
+        ListingFilter filter = new ListingFilter(null, null, null, null, null, null);
 
         Page<Listing> result = listingRepository.findAll(
                 ListingSpecification.fromFilter(filter),
@@ -161,7 +168,8 @@ class ListingRepositoryTest {
             String price,
             int beds,
             double baths,
-            int sqft
+            int sqft,
+            int energyStarScore
     ) {
         return Listing.builder()
                 .address(address)
@@ -171,6 +179,7 @@ class ListingRepositoryTest {
                 .sqft(sqft)
                 .listingUrl("http://example.com/" + address.replace(" ", "-"))
                 .photoUrls(List.of("photo1.jpg", "photo2.jpg"))
+                .energyStarScore(energyStarScore)
                 .build();
     }
 }
